<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jpedal</groupId>
	<artifactId>jpedal_lgpl</artifactId>
	<version>4.92-p12</version>
	<description>Patched jPedal based on the last official jpedal version 4.92</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<sourceDirectory>${basedir}/src</sourceDirectory>
		 <resources>
            <resource>
                <directory>src</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <exclude>**/*.orig</exclude>
                    <exclude>**/.class</exclude>
                    <exclude>**/*~</exclude>
                    <!--exclude>**/*.xslt</exclude-->
                    <exclude>**/.~[0-9]+~</exclude>
                </excludes>
            </resource>
             <resource>
                <directory></directory>
                <includes>
                    <include>**.txt</include>
                </includes> 
            </resource>
            <resource>
                <directory>src</directory>
                <includes>
                    <include>version.num</include>
                </includes> 
            </resource>
         </resources>
		 <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<mainClass>org.jpedal.examples.viewer.Viewer</mainClass>
							<addClasspath>true</addClasspath>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-source-plugin</artifactId>
			  <version>3.0.1</version>
			  <executions>
				<execution>
				  <id>attach-sources</id>
				  <goals>
					<goal>jar-no-fork</goal>
				  </goals>
				</execution>
			  </executions>
			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-javadoc-plugin</artifactId>
			  <version>3.0.0</version>
			  <configuration>
				<doclint>none</doclint>
			  </configuration>
			  <executions>
				<execution>
				  <id>attach-javadocs</id>
				  <goals>
					<goal>jar</goal>
				  </goals>
				</execution>
			  </executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>javax.media</groupId>
			<artifactId>jai_core</artifactId>
			<version>1.1.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>javax.media</groupId>
			<artifactId>jai_codec</artifactId>
			<version>1.1.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.jai-imageio</groupId>
			<artifactId>jai-imageio-core</artifactId>
			<version>1.4.0</version>
			<scope>compile</scope>
		</dependency>
		<!-- To restore jpg2K format for jpedal pdf-to-image conversion -->
		<dependency>
    		<groupId>com.github.jai-imageio</groupId>
    		<artifactId>jai-imageio-jpeg2000</artifactId>
    		<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
			<version>1.61</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcmail-jdk15on</artifactId>
			<version>1.61</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
	
	<repositories>
		<repository>
			  <id>central</id>
			  <name>Central Repository</name>
			  <url>https://repo.maven.apache.org/maven2</url>
			  <layout>default</layout>
			  <snapshots>
				<enabled>false</enabled>
			  </snapshots>
		</repository>

		<repository>
			<id>Geotoolkit</id>
			<layout>default</layout>
			<name>geotoolkit-repo-3rd-party</name>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>https://nexus.geomatys.com/repository/geotoolkit</url>
		</repository>
	</repositories>
</project>
